<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".CreateQuiz">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/buttonstyle3"
        android:text="@string/quiz_model"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/quiz_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/enter_quiz_name"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        android:textStyle="italic" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/quiz_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:hint="@string/enter_question"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="20sp"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/quiz_option1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/option1"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="20sp"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/quiz_option2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/option2"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="20sp"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/quiz_option3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/option3"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="20sp"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/quiz_option4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/option4"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="20sp"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/quiz_correct_option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/correct_option_enter_option_number"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="20sp"
            android:textStyle="italic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:padding="20dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/quiz_add_question"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_weight="1"
                android:background="@drawable/buttonstyle6"
                android:paddingHorizontal="20dp"
                android:text="@string/add_question_to_list"
                android:textColor="@color/white"
                android:textSize="10sp"
                tools:ignore="SmallSp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/quiz_submit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_weight="1"
                android:background="@drawable/buttonstyle1"
                android:paddingHorizontal="20dp"
                android:text="@string/submit_the_quiz"
                android:textColor="@color/white"
                android:textSize="10sp"
                tools:ignore="SmallSp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>