<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@drawable/ic_background"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".StartQuiz">

    <LinearLayout
        android:id="@+id/show_start_quiz"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="20dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/start_quiz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonstyle9"
            android:text="@string/start_quiz"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/quiz_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?android:attr/detailsElementBackground"
        android:gravity="center_horizontal|center_vertical"
        android:text="TextView"
        android:textColor="@color/colorPrimary"
        android:textSize="36sp"
        android:layout_marginTop="20sp"
        android:layout_marginBottom="50dp"
        android:textStyle="bold"
        />

    <LinearLayout
        android:id="@+id/show_quiz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">


        <TextView
            android:id="@+id/quiz_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="90dp"
            android:text="@string/quiz_name"
            android:textColor="@color/colour10"
            android:textSize="25sp"
            android:textStyle="italic"/>

        <TextView
            android:id="@+id/quiz_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:text="@string/questions"
            android:textAlignment="center"
            android:textColor="@color/primary_text_color"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/quiz_option1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/buttonstyle2"
            android:padding="10dp"
            android:text="@string/option1"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/quiz_option2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/buttonstyle2"
            android:padding="10dp"
            android:text="@string/option2"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/quiz_option3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/buttonstyle2"
            android:padding="10dp"
            android:text="@string/option3"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/quiz_option4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/buttonstyle2"
            android:padding="10dp"
            android:text="@string/option4"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/quiz_next_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonstyle10"
            android:text="@string/next"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/quiz_submit_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonstyle3"
            android:text="@string/submit"

            android:visibility="gone" />

    </LinearLayout>


</LinearLayout>