<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/ic_background"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".BoardContent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/board_content_announcement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:background="@drawable/buttonstyle1"
            android:padding="10dp"
            android:text="@string/announcement"
            android:textColor="@color/white"
            android:textSize="10sp"
            tools:ignore="SmallSp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/board_content_notes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:background="@drawable/buttonstyle3"
            android:paddingHorizontal="40dp"
            android:text="@string/notes"
            android:textColor="@color/white"
            android:textSize="10sp"
            tools:ignore="SmallSp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/board_content_quizes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:background="@drawable/buttonstyle1"
            android:paddingHorizontal="30dp"
            android:text="@string/quizzes"
            android:textColor="@color/white"
            android:textSize="10sp"
            tools:ignore="SmallSp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ListView
            android:id="@+id/board_content_list"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

        <ListView
            android:id="@+id/board_content_quiz_marks"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/board_content_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_comments_yet"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="italic"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/board_content_add_announcement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/make_announcement"
            android:visibility="gone" />

        <Button
            android:id="@+id/board_content_add_notes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_notes"
            android:visibility="gone" />

        <Button
            android:id="@+id/board_content_add_quiz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_quiz"
            android:visibility="gone" />
    </LinearLayout>


</LinearLayout>