<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splashbackground"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".IntroActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/quienteticon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/quientet"
                android:contentDescription="@string/quintet_logo" />

            <TextView
                android:id="@+id/letsgetstartedtext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/let_s_get_started_text"
                android:textColor="@color/primary_text_color"
                android:textSize="@dimen/lets_get_started_text_size" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/intro_text_marginStartEnd"
                android:layout_marginTop="@dimen/intro_text_marginTop"
                android:layout_marginEnd="@dimen/intro_text_marginStartEnd"
                android:gravity="center"
                android:lineSpacingExtra="@dimen/intro_text_line_spacing_extra"
                android:text="@string/intro_text_description"
                android:textColor="@color/secondary_text_color"
                android:textSize="@dimen/intro_text_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/select_your_designatation"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:paddingTop="15sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/intro_admin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:height="60dp"
                    android:background="@drawable/buttonstyle4"
                    android:text="@string/admin"
                    android:textColor="@color/white" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/intro_staff"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:height="60dp"
                    android:background="@drawable/buttonstyle8"
                    android:text="@string/staff"
                    android:textColor="@color/white" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/intro_student"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:height="60dp"
                    android:background="@drawable/buttonstyle3"
                    android:text="@string/student"

                    android:textColor="@color/white" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>