<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background"
    android:padding="30dp"
    tools:context=".StudentIntro">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_app_name_intro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/welcome"
                android:textColor="#04D5F4"
                android:textSize="30sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="220dp"
                android:layout_height="270dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/beclogo"
                android:contentDescription="@string/college_logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:text="@string/let_s_get_started_text"
                android:textColor="@color/primary_text_color"
                android:textSize="@dimen/lets_get_started_text_size" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/intro_text_marginStartEnd"
                android:layout_marginTop="@dimen/intro_text_marginTop"
                android:layout_marginEnd="@dimen/intro_text_marginStartEnd"
                android:gravity="center"
                android:lineSpacingExtra="@dimen/intro_text_line_spacing_extra"
                android:text="@string/intro_text_description"
                android:textColor="@color/secondary_text_color"
                android:textSize="@dimen/intro_text_size" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/student_intro_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:height="60dp"
                android:background="@drawable/color_button"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:visibility="gone" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/student_intro_sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:height="60dp"
                android:background="@drawable/color_button"
                android:text="@string/sign_in"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>