<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splashbackground"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".FlashActivity">

    <ImageView
        android:id="@+id/SplashScreenImage"
        android:layout_width="400dp"
        android:layout_height="300dp"
        android:layout_marginTop="-100dp"
        android:layout_marginBottom="-70dp"
        android:contentDescription="@string/flash_img"
        android:src="@drawable/kaksha" />

    <TextView
        android:id="@+id/splashsreentext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/presented_by"
        android:textColor="#140253"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/quientetImage"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="-70dp"
        android:layout_marginBottom="-70dp"
        android:contentDescription="@string/quintet_logo"
        android:src="@drawable/quientet" />

</LinearLayout>